{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 40,
  "lineage": "26b582d9-a33e-e853-f6ac-e143b7f43081",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b867f7899ff7f1f9",
            "arn": "arn:aws:ec2:us-east-1:680464296107:elastic-ip/eipalloc-0b867f7899ff7f1f9",
            "association_id": "eipassoc-006144a7f5c330f46",
            "domain": "vpc",
            "id": "eipalloc-0b867f7899ff7f1f9",
            "instance": "i-0da0d55d89b86b8bc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09e8ec046573d3ad7",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-34-202-184-39.compute-1.amazonaws.com",
            "public_ip": "34.202.184.39",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-bastion-eip"
            },
            "tags_all": {
              "Name": "techcorp-bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5fe06e98d3dd32a",
            "arn": "arn:aws:ec2:us-east-1:680464296107:elastic-ip/eipalloc-0c5fe06e98d3dd32a",
            "association_id": "eipassoc-0046f97496b83a394",
            "domain": "vpc",
            "id": "eipalloc-0c5fe06e98d3dd32a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07eb6768878debb51",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-100-51-228-130.compute-1.amazonaws.com",
            "public_ip": "100.51.228.130",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-nat-eip-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c02e92f8731c4a71",
            "arn": "arn:aws:ec2:us-east-1:680464296107:elastic-ip/eipalloc-0c02e92f8731c4a71",
            "association_id": "eipassoc-03f7e8a18df229112",
            "domain": "vpc",
            "id": "eipalloc-0c02e92f8731c4a71",
            "network_border_group": "us-east-1",
            "network_interface": "eni-040a5f6eeeaf17c4b",
            "private_dns": "ip-10-0-2-118.ec2.internal",
            "private_ip": "10.0.2.118",
            "public_dns": "ec2-54-173-83-139.compute-1.amazonaws.com",
            "public_ip": "54.173.83.139",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-nat-eip-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:680464296107:instance/i-0da0d55d89b86b8bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da0d55d89b86b8bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tech-corp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09e8ec046573d3ad7"
              }
            ],
            "primary_network_interface_id": "eni-09e8ec046573d3ad7",
            "private_dns": "ip-10-0-1-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-35-175-123-148.compute-1.amazonaws.com",
            "public_ip": "35.175.123.148",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07c4fd441141991ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a65c96826c3e7fe7",
            "tags": {
              "Name": "techcorp-bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e7325cd5fc0e93d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "i-0da0d55d89b86b8bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:680464296107:instance/i-03367586a906aedd2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03367586a906aedd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "tech-corp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02a89d92a6f1f4c0f"
              }
            ],
            "primary_network_interface_id": "eni-02a89d92a6f1f4c0f",
            "private_dns": "ip-10-0-3-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5afda0feac72273",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0209676a40e6f1fc9",
            "tags": {
              "Name": "techcorp-db"
            },
            "tags_all": {
              "Name": "techcorp-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a4f6fb603b851b22"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "i-03367586a906aedd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:680464296107:instance/i-0624849b44e616c5e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0624849b44e616c5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tech-corp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0728db2a54b5dc7e6"
              }
            ],
            "primary_network_interface_id": "eni-0728db2a54b5dc7e6",
            "private_dns": "ip-10-0-3-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.137",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0716c4054265328c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0209676a40e6f1fc9",
            "tags": {
              "Name": "techcorp-web-1"
            },
            "tags_all": {
              "Name": "techcorp-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b363b4df8adaeeb2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "i-0624849b44e616c5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0622c21dd3d2b1075",
            "arn": "arn:aws:ec2:us-east-1:680464296107:instance/i-0ecf678df77e43300",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecf678df77e43300",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tech-corp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04b454ab5a2f07599"
              }
            ],
            "primary_network_interface_id": "eni-04b454ab5a2f07599",
            "private_dns": "ip-10-0-4-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.64",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6f3529683233951",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a87706e459583ecd",
            "tags": {
              "Name": "techcorp-web-2"
            },
            "tags_all": {
              "Name": "techcorp-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b363b4df8adaeeb2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "i-0ecf678df77e43300",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:internet-gateway/igw-0e0765d6ebc0428a7",
            "id": "igw-0e0765d6ebc0428a7",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:loadbalancer/app/techcorp-alb/b20be83d3437ac22",
            "arn_suffix": "app/techcorp-alb/b20be83d3437ac22",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-1432821469.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680464296107:loadbalancer/app/techcorp-alb/b20be83d3437ac22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00721d6cdb2c08f55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b765408df7d0df0"
              },
              {
                "subnet_id": "subnet-0a65c96826c3e7fe7"
              }
            ],
            "subnets": [
              "subnet-04b765408df7d0df0",
              "subnet-0a65c96826c3e7fe7"
            ],
            "tags": {
              "Name": "techcorp-alb"
            },
            "tags_all": {
              "Name": "techcorp-alb"
            },
            "vpc_id": "vpc-051df2aa723546800",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:loadbalancer/app/techcorp-alb/b20be83d3437ac22"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:listener/app/techcorp-alb/b20be83d3437ac22/3851ebb037775ca2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680464296107:listener/app/techcorp-alb/b20be83d3437ac22/3851ebb037775ca2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:loadbalancer/app/techcorp-alb/b20be83d3437ac22",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:listener/app/techcorp-alb/b20be83d3437ac22/3851ebb037775ca2"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "arn_suffix": "targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:680464296107:loadbalancer/app/techcorp-alb/b20be83d3437ac22"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "techcorp-web-tg"
            },
            "tags_all": {
              "Name": "techcorp-web-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008,i-0624849b44e616c5e,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "target_id": "i-0624849b44e616c5e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "target_id": "i-0624849b44e616c5e"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008,i-0ecf678df77e43300,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "target_id": "i-0ecf678df77e43300"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:680464296107:targetgroup/techcorp-web-tg/36c37ccac3ee8008",
            "target_id": "i-0ecf678df77e43300"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5fe06e98d3dd32a",
            "association_id": "eipassoc-0046f97496b83a394",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bab4605000369900",
            "network_interface_id": "eni-07eb6768878debb51",
            "private_ip": "10.0.1.202",
            "public_ip": "100.51.228.130",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a65c96826c3e7fe7",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c02e92f8731c4a71",
            "association_id": "eipassoc-03f7e8a18df229112",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06dcacfbad57abe73",
            "network_interface_id": "eni-040a5f6eeeaf17c4b",
            "private_ip": "10.0.2.118",
            "public_ip": "54.173.83.139",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b765408df7d0df0",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08dff32f22478fd031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bab4605000369900",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08dff32f22478fd03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08dff32f22478fd03"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-047710d79766f8f6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06dcacfbad57abe73",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-047710d79766f8f6b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-047710d79766f8f6b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e0765d6ebc0428a7",
            "id": "r-rtb-0f6e182c80d4d09fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6e182c80d4d09fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f6e182c80d4d09fa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:route-table/rtb-08dff32f22478fd03",
            "id": "rtb-08dff32f22478fd03",
            "owner_id": "680464296107",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bab4605000369900",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "rtb-08dff32f22478fd03",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:route-table/rtb-047710d79766f8f6b",
            "id": "rtb-047710d79766f8f6b",
            "owner_id": "680464296107",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06dcacfbad57abe73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "rtb-047710d79766f8f6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:route-table/rtb-0f6e182c80d4d09fa",
            "id": "rtb-0f6e182c80d4d09fa",
            "owner_id": "680464296107",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0765d6ebc0428a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "rtb-0f6e182c80d4d09fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ceac73f4d8e7b13",
            "region": "us-east-1",
            "route_table_id": "rtb-08dff32f22478fd03",
            "subnet_id": "subnet-0209676a40e6f1fc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046cbb9eff10fa1bd",
            "region": "us-east-1",
            "route_table_id": "rtb-047710d79766f8f6b",
            "subnet_id": "subnet-0a87706e459583ecd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f873960349a9d7b2",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6e182c80d4d09fa",
            "subnet_id": "subnet-0a65c96826c3e7fe7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a93f7984e5081eaa",
            "region": "us-east-1",
            "route_table_id": "rtb-0f6e182c80d4d09fa",
            "subnet_id": "subnet-04b765408df7d0df0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:security-group/sg-00721d6cdb2c08f55",
            "description": "Allow HTTP/HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00721d6cdb2c08f55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techcorp-alb-sg",
            "name_prefix": "",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-alb-sg"
            },
            "tags_all": {
              "Name": "techcorp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "sg-00721d6cdb2c08f55",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:security-group/sg-08e7325cd5fc0e93d",
            "description": "Allow SSH from trusted IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e7325cd5fc0e93d",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.89.34.28/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-bastion-sg"
            },
            "tags_all": {
              "Name": "techcorp-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "sg-08e7325cd5fc0e93d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:security-group/sg-0a4f6fb603b851b22",
            "description": "Allow Postgres and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4f6fb603b851b22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b363b4df8adaeeb2"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7325cd5fc0e93d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-db-sg",
            "name_prefix": "",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-db-sg"
            },
            "tags_all": {
              "Name": "techcorp-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "sg-0a4f6fb603b851b22",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:security-group/sg-0b363b4df8adaeeb2",
            "description": "Allow HTTP/HTTPS and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b363b4df8adaeeb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e7325cd5fc0e93d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-web-sg"
            },
            "tags_all": {
              "Name": "techcorp-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051df2aa723546800"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "sg-0b363b4df8adaeeb2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:subnet/subnet-0209676a40e6f1fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0209676a40e6f1fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680464296107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "subnet-0209676a40e6f1fc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:subnet/subnet-0a87706e459583ecd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87706e459583ecd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680464296107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "subnet-0a87706e459583ecd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:subnet/subnet-0a65c96826c3e7fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a65c96826c3e7fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680464296107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "subnet-0a65c96826c3e7fe7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:subnet/subnet-04b765408df7d0df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b765408df7d0df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "680464296107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-051df2aa723546800"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "subnet-04b765408df7d0df0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:680464296107:vpc/vpc-051df2aa723546800",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ca3ceb6e141204e",
            "default_route_table_id": "rtb-0ebf42a46bb5ed560",
            "default_security_group_id": "sg-0385ae1feb1def533",
            "dhcp_options_id": "dopt-0d2108b4c2a0003ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051df2aa723546800",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ebf42a46bb5ed560",
            "owner_id": "680464296107",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "680464296107",
            "id": "vpc-051df2aa723546800",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}